# mines-prophet

./: CMakeLists.txt
src/: main.cpp  qml.qrc
src/agent/: minesdqnrunner.cpp  minesdqnrunner.h
src/mines-prophet/views/: main.qml  page1.qml
src/viewmodels/: gameveiwmodel.cpp  gameveiwmodel.h
